[package]
name = "scrawl"
version = "0.1.5"
authors = ["Amy <git@xvrqt.com>"]
edition = "2018"

repository = "https://git.xvrqt.com/amy/scrawl.git"
homepage = "https://git.xvrqt.com/amy/scrawl"
license = "BSD-3-Clause"
readme = "README.md"
description = "Opens a user's preferred text editor so they can edit data inline and saves the result to a String. Useful for interactive CLI applications."
keywords = ["editor", "cli", "text", "xvrqt"]
categories = ["config", "text-editors", "command-line-interface"]

